--- a/src/App.css
+++ b/src/App.css
@@ -12,3 +12,22 @@
 .read-the-docs {
   color: #888;
 }
+
+.show {
+  opacity: 0;
+}
+.show-start {
+  animation: show 1500ms;
+}
+.show-end {
+  opacity: 1;
+}
+
+@keyframes show {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
